# slo_recommendation_engine

./: .gitignore  DESIGN_NOTES.md  Makefile  README.md  pyproject.toml  requirements.txt  root_agent.yaml  settings.toml
.github/workflows/: ci.yml
api/: __init__.py  main.py
api/middleware/: __init__.py  rate_limit.py
api/routes/: __init__.py  health.py  integrations.py  recommendations.py  reviews.py  services.py  slos.py
docker/: Dockerfile.api  Dockerfile.ui  docker-compose.yml
k8s/api/: api-deployment.yaml  api-ingress.yaml  api-service.yaml
k8s/chromadb/: chromadb-deployment.yaml  chromadb-pvc.yaml  chromadb-service.yaml
k8s/db/: postgres-deployment.yaml  postgres-service.yaml  redis-deployment.yaml
k8s/ui/: ui-deployment.yaml  ui-ingress.yaml  ui-service.yaml
scripts/: e2e_run.py
src/slo_engine/: __init__.py  review_store.py
src/slo_engine/agents/: __init__.py  agent.py  base.py  llm_manager.py  prompt.py
src/slo_engine/config/: __init__.py  config.py  dev.yaml  prod.yaml  settings.py
src/slo_engine/core/: __init__.py  agent_registry.py
src/slo_engine/db/: __init__.py  database.py  models.py
src/slo_engine/integrations/: __init__.py  catalog_adapter.py  metrics_adapter.py  webhook_sink.py
src/slo_engine/mcp/: __init__.py  client.py  knowledge_mcp_server.py
src/slo_engine/observability/: __init__.py  opik_tracer.py
src/slo_engine/rag/: __init__.py  knowledge_store.py
src/slo_engine/utils/: pii_scrubber.py
tests/: conftest.py  test_api.py  test_compute_logic_properties.py  test_dependency_agent.py  test_knowledge_store.py  test_metrics_agent.py  test_pii_scrubber.py  test_recommendation_agent.py
tests/fixtures/: sample_ecommerce_graph.json
ui/: ui.py
(+23 files in other folders)
