[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "slo-engine"
version = "1.0.0"
description = "AI-powered SLO Recommendation Engine"
requires-python = ">=3.12"
readme = "README.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src", "."]

[project.scripts]
slo-engine = "api.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]
ignore = ["E402", "E501", "E701", "E741", "N803", "N806", "UP040", "UP042", "UP047"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

[tool.black]
line-length = 100
target-version = ["py312"]
